# battosh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  Session.vim  test.bat
.github/workflows/: cmake-single-platform.yml
ATRC/: Arithmetic-Operators.atrc  CALL.atrc  CD.atrc  CLS.atrc  COMMENTS.atrc  COPY.atrc  DIR.atrc  ECHO.atrc  EXIT.atrc  IF.atrc  MKDIR.atrc  PROCESS_FLAGS.atrc  README.txt  RELATIONAL_OPERATORS.atrc  RMDIR.atrc  SET.atrc  TEMPLATE.atrc  TYPE.atrc  VARIABLES.atrc  VER.atrc  battosh.atrc
_source/: 1.temp  ATRC_VALUES.cpp  ATRC_VALUES.hxx  VARIABLES.cpp  VARIABLES.hxx  battish.c  battish.h  battosh.cpp  battosh.hxx  lexer.cpp  lexical.cpp  message.cpp  parse.cpp  pathing.cpp  tosh.cpp  variablify.cpp
_source/commands/: commands.hxx
docs/: CALL.txt  CD.txt  CLS.txt  Comments.txt  DIR.txt  ECHO.txt  EXIT.txt  MKDIR.txt  README.txt  RELATIONAL_OPERATORS.txt  RMDIR.txt  TEMPLATE.txt  TYPE.txt  VER.txt
include/ATRC/libs/win/: ATRC.lib
linux/: run.sh
linux/shell/: globals.sh
release_building/: installer.nsi  linux.sh  setup.ps1  uninstall.ps1  updateversion.py  win.bat
release_building/battosh.AppDir/: .DirIcon  AppRun  battosh.desktop
source/: .txt  ATRC_VALUES.cpp  ATRC_VALUES.hxx  VARIABLES.cpp  VARIABLES.hxx  battosh.cpp  battosh.hxx  lexer.cpp  message.cpp  output_log.cpp  parse.cpp  parser.cpp  pathing.cpp  resources.rc  tosh.cpp
source/commands/: commands.hxx
test/: test.bat  test.sh
win/: build.bat  run.bat
win/batch/: del_swp.bat  globals.bat
